--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -276,7 +276,7 @@
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
   "enterNewPassword": "Please enter your new password",
-  "confirmNewPassword": "Confirm password",
+  "confirmNewPassword": "Confirm new password",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Invalid URL",
