--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -107,7 +107,7 @@
   "sent": "Sent",
   "received": "Received",
   "sendMessage": "Message",
-  "groupMembers": "Group members",
+  "groupMembers": "Members",
   "moreInformation": "More information",
   "resend": "Resend",
   "deleteConversationConfirmation": "Permanently delete the messages in this conversation?",
@@ -123,14 +123,14 @@
   "imageCaptionIconAlt": "Icon showing that this image has a caption",
   "addACaption": "Add a caption...",
   "copySessionID": "Copy Session ID",
-  "copyOpenGroupURL": "Copy Group's URL",
+  "copyOpenGroupURL": "Copy Group URL",
   "save": "Save",
   "saveLogToDesktop": "Save log to desktop",
   "saved": "Saved",
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
-  "linkPreviewDescription": "Show link previews for supported URLs.",
+  "linkPreviewDescription": "Generate link previews for supported URLs.",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microphone",
   "mediaPermissionsDescription": "Allow access to microphone.",
@@ -143,7 +143,7 @@
   "typingIndicatorsSettingTitle": "Typing Indicators",
   "zoomFactorSettingTitle": "Zoom Factor",
   "themesSettingTitle": "Themes",
-  "primaryColor": "Primary Color",
+  "primaryColor": "Primary Colour",
   "primaryColorGreen": "Primary color green",
   "primaryColorBlue": "Primary color blue",
   "primaryColorYellow": "Primary color yellow",
@@ -156,11 +156,11 @@
   "oceanDarkThemeTitle": "Ocean Dark",
   "oceanLightThemeTitle": "Ocean Light",
   "pruneSettingTitle": "Trim Communities",
-  "pruneSettingDescription": "Delete messages from Communities older than 6 months, and where there are over 2,000 messages.",
+  "pruneSettingDescription": "Delete messages older than 6 months from Communities that have over 2,000 messages.",
   "enable": "Enable",
   "keepDisabled": "Keep disabled",
   "notificationSettingsDialog": "The information shown in notifications.",
-  "nameAndMessage": "Name and content",
+  "nameAndMessage": "Name & Content",
   "noNameOrMessage": "No name or content",
   "nameOnly": "Name Only",
   "newMessage": "New Message",
@@ -193,6 +193,7 @@
   "timerOption_12_hours": "12 hours",
   "timerOption_1_day": "1 day",
   "timerOption_1_week": "1 week",
+  "timerOption_2_weeks": "2 weeks",
   "disappearingMessages": "Disappearing messages",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear Nickname",
@@ -210,15 +211,16 @@
   "timerOption_12_hours_abbreviated": "12h",
   "timerOption_1_day_abbreviated": "1d",
   "timerOption_1_week_abbreviated": "1w",
+  "timerOption_2_weeks_abbreviated": "2w",
   "disappearingMessagesDisabled": "Disappearing messages disabled",
-  "disabledDisappearingMessages": "$name$ disabled disappearing messages.",
+  "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
   "youDisabledDisappearingMessages": "You disabled disappearing messages.",
   "timerSetTo": "Disappearing message time set to $time$",
   "noteToSelf": "Note to Self",
   "hideMenuBarTitle": "Hide Menu Bar",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
   "startConversation": "Start New Conversation",
-  "invalidNumberError": "Invalid Session ID or ONS Name",
+  "invalidNumberError": "Please check the Session ID or ONS name and try again",
   "failedResolveOns": "Failed to resolve ONS name",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on startup.",
@@ -280,7 +282,7 @@
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Invalid URL",
-  "copiedToClipboard": "Copied to clipboard",
+  "copiedToClipboard": "Copied",
   "passwordViewTitle": "Enter Password",
   "password": "Password",
   "setPassword": "Set Password",
@@ -374,7 +376,7 @@
   "invalidGroupNameTooLong": "Please enter a shorter group name",
   "pickClosedGroupMember": "Please pick at least 1 group member",
   "closedGroupMaxSize": "A group cannot have more than 100 members",
-  "noBlockedContacts": "No blocked contacts",
+  "noBlockedContacts": "You have no blocked contacts.",
   "userAddedToModerators": "User added to admin list",
   "userRemovedFromModerators": "User removed from admin list",
   "orJoinOneOfThese": "Or join one of these...",
@@ -457,7 +459,7 @@
   "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
   "callMissedNotApproved": "Call missed from '$name$' as you haven't approved this conversation yet. Send a message to them first.",
   "callMediaPermissionsDescription": "Enables voice and video calls to and from other users.",
-  "callMediaPermissionsDialogContent": "Your IP is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
+  "callMediaPermissionsDialogContent": "Your IP address is visible to your call partner and an Oxen Foundation server while using beta calls. Are you sure you want to enable Voice and Video Calls?",
   "callMediaPermissionsDialogTitle": "Voice and Video Calls (Beta)",
   "startedACall": "You called $name$",
   "answeredACall": "Call with $name$",
